# go2_raspi_app

./: .gitignore  README.md  go2_teach.json  pyproject.toml
mobile_companion/: README.md  index.html  package.json
mobile_companion/public/: manifest.webmanifest
mobile_companion/src/: main.js  style.css
scripts/: go2_lidar_ws_bridge.py
source_web/systema8os_clone_1773408722280/: index.html
source_web/systema8os_clone_1773408722280/js/: main.js
source_web/systema8os_clone_1773408722280/js/audio/: Analyzer.js
source_web/systema8os_clone_1773408722280/js/logic/: InputHandler.js
source_web/systema8os_clone_1773408722280/js/ui/components/: DevicePanel.js  ReverbPanel.js  TransportPanel.js
source_web/systema8os_clone_1773408722280/js/vis/: Scene.js  Visualizer.js
source_web/systema8os_clone_1774264209725/: README.txt  SystemaLauncher.java  index.html
source_web/systema8os_clone_1774264209725/js/: main.js
source_web/systema8os_clone_1774264209725/js/audio/: AudioEngine.js
source_web/systema8os_clone_1774264209725/js/data/: Store.js
source_web/systema8os_clone_1774264209725/js/logic/: TransEngine.js
source_web/systema8os_clone_1774264209725/js/ui/: ScatterPad.js  UI.js
source_web/systema8os_clone_1774264209725/js/vis/: FaceMonitor.js  WebcamMonitor.js
src/go2_cli/: __init__.py  cli.py  config.py  errors.py  main.py  tui.py
src/go2_cli/transports/: __init__.py  base.py  dds.py  udp.py  webrtc.py
src/go2_raspi_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+9 files in other folders)
